--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "0.11.3",
     "mobx": "^6.1.8",
     "mobx-react": "^7.1.0",
@@ -161,6 +162,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/uuid": "^8.3.0",
     "less": "^4.1.1",
     "less-loader": "^6.2.0"
