--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "antd": "^4.14.1",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
@@ -58,6 +59,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
+    "qs": "^6.5.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-contexify": "^5.0.0",
@@ -164,6 +166,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.168",
+    "@types/qs": "^6.9.6",
     "@types/uuid": "^8.3.0",
     "less": "^4.1.1",
     "less-loader": "^6.2.0"
