--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "qs": "^6.5.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-color": "^2.19.3",
     "react-contexify": "^5.0.0",
     "react-dev-utils": "^11.0.3",
     "react-dnd": "^14.0.2",
@@ -167,6 +168,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.168",
     "@types/qs": "^6.9.6",
+    "@types/react-color": "^3.0.4",
     "@types/uuid": "^8.3.0",
     "less": "^4.1.1",
     "less-loader": "^6.2.0"
